add header to the Python post.

--- a/blog/emon/2019/20190211_Python.md
+++ b/blog/emon/2019/20190211_Python.md
@@ -1,10 +1,14 @@
+---
+title: Python
+date: 2019-02-11
+description: Introducing Python programming language, the history, the applications, etc.
+---
+
 # Python
 
 Oh! Python, Is it a snack? Yes, you are right. For general people python is a snake. But those who are from computer science major or other computer-related field they will answer you that python is a great, one of the easiest and powerful programming language.
 
 My major is computer science and technology. I’m familiar with some programming language like C, Java, Python. I also learned HTML, CSS for web development. But between all of this language I like python most. Today I want to introduce python to you. 
-
-
 
 
 ## What is python programming language?
@@ -21,8 +25,6 @@ in the business's success, government, and non-profit organizations; there
 are many others.
 
 
-
-
 ## History
 
 Python was conceived in the late 1980 by [Guido van Rossum](https://en.wikipedia.org/wiki/Guido_van_Rossum)at [Centrum Wiskunde & Informatica](https://en.wikipedia.org/wiki/Centrum_Wiskunde_&_Informatica) (CWI) in the [Netherlands](https://en.wikipedia.org/wiki/Netherlands) as a successor to the [ABC language](https://en.wikipedia.org/wiki/ABC_(programming_language)) (itself inspired by [SETL](https://en.wikipedia.org/wiki/SETL)) capable of [exception handling](https://en.wikipedia.org/wiki/Exception_handling) and interfacing with the [Amoeba](https://en.wikipedia.org/wiki/Amoeba_(operating_system)) operating system. Its implementation began in December 1989. Van Rossum’s long influence on Python is reflected in the title given to him by the Python community: [*Benevolent Dictator For Life*](https://en.wikipedia.org/wiki/Benevolent_Dictator_For_Life) (BDFL) – a post from which he gave himself permanent vacation on July 12, 2018.
@@ -32,15 +34,11 @@ Python 2.0 was released on 16 October 2000 with many major new features, includi
 Python 3.0 was released on 3 December 2008. It was a major revision of the language that is not [backward-compatible](https://en.wikipedia.org/wiki/Backward_compatibility). Many of its major features were [back ported](https://en.wikipedia.org/wiki/Backporting) to Python 2.6.x and 2.7.x version series. Releases of Python 3 include the 2to3 utility, which automates (at least partially) the translation of Python 2 code to Python 3.
 
 
-
-
 ## Readability
 
 Python closely resembles the English language, using words like ‘not’ and ‘in’ to make it to where you can often read a program, or script, aloud to someone else and not feel you’re speaking some arcane language. This is also helped by Python’s very strict punctuation rules which means you don’t have curly braces ({ }) all over your code.
 
 Also, Python has a set of rules, known as PEP 8, that tell every Python developer how to format their code. This means you always know where to put new lines and, more importantly, that pretty much every other Python script you pick up, whether it was written by a novice or a seasoned professional, will look very similar and be just as easy to read. The fact that my Python code, with five or so years of experience, looks very similar to the code that Guido van Rossum (the creator of Python) writes is such an ego boost.
-
-
 
 
 ## Libraries
@@ -56,13 +54,9 @@ the “click” library and then import it into your scripts and use it. There a
 manipulation, to scientific calculations, to server automation.
 
 
-
-
 ## Community
 
 Python has user groups everywhere, usually called PUGs, and does major conferences on every continent other than Antarctica. PyCon NA, the largest Python conference in North America, sells out its 2,500 tickets this year. And, reflecting Python’s commitment to diversity, it had over 30% women speakers. PyCon NA 2013 also started a trend of offering “Young Coder” workshops, where attendees taught Python to kids between 9 and 16 years of age for a day, getting them familiar with the language and, ultimately, helping them hack and mod some games on the Raspberry Pis they were given. Being part of a such a positive community does a lot to keep you motivated. Check out [PyCon](https://www.pycon.org/) to find your nearest Python conference.
-
-
 
 
 ## Why Learn Python Programming?
@@ -79,8 +73,6 @@ The simplicity of Python is what it makes so popular. The following gives a high
 - Interpreted nature
 - Ideal for scripting and rapid application
 - Fit for many platforms
-
-
 
 
 ## Where is Python language used?
@@ -161,8 +153,6 @@ Python is also used to build ERP and e-commerce systems:
 - [Tryton](http://www.tryton.org/) is a three-tier high-level general purpose application platform.
 
 
-
-
 ## Why Python Programming Language Has Bright Future?
 
 - Python has been voted as most favorite programming language beating C, C++ and java programming. Python programming is an open source programming language and used to develop almost every kind of application.
@@ -172,8 +162,6 @@ Python is also used to build ERP and e-commerce systems:
 - Python programming is versatile, robust and comprehensive. Python is a high-level programming language and easy to learn as well as it reduces the coding effort compare to other programming languages.
 
 - Python programming is used to write test scripts and tests mobile devices performance. It is one of the most versatile languages these days. Python programmers are most demand able in the IT industry these days and get paid more compared to another language programmer.
-
-
 
 
 ## Conclusion
@@ -188,6 +176,7 @@ At the end I want to say, Python is my favorite programming language. You can ch
 
 
 
+----
 
 WRITTEN BY---
 
@@ -197,4 +186,4 @@ CHONGQING UNIVERSITY OF SCIENCE AND TECHNOLOGY
 
 Email: [mohaiminul100@hotmail.com](mailto:mohaiminul100@hotmail.com)
 
-Tel: +86 1320 6100127
+Tel: +86 13206100127
