minor update in the content.

--- a/blog/emon/2019/20190211_Python.md
+++ b/blog/emon/2019/20190211_Python.md
@@ -8,26 +8,19 @@ description: Introducing Python programming language, the history, the applicati
 
 Oh! Python, Is it a snack? Yes, you are right. For general people python is a snake. But those who are from computer science major or other computer-related field they will answer you that python is a great, one of the easiest and powerful programming language.
 
-My major is computer science and technology. I’m familiar with some programming language like C, Java, Python. I also learned HTML, CSS for web development. But between all of this language I like python most. Today I want to introduce python to you. 
+My major is computer science and technology. I'm familiar with some programming language like C, Java, Python. I also learned HTML, CSS for web development. But between all of this language I like python most. Today I want to introduce python to you. 
 
 
 ## What is python programming language?
 
 ![python_lang](img/python_lang.jpg)
 
-[Python](https://www.python.org) is a general-purpose programming language that can be
-used on any modern computer operating system. It can be used for processing
-text, numbers, images, scientific data and just about anything else you might
-save on a computer. It is used daily in the operations of the Google search
-engine, the video-sharing website YouTube, NASA and the New York Stock
-Exchange. These are but a few of the places where Python plays important roles
-in the business's success, government, and non-profit organizations; there
-are many others.
+[Python](https://www.python.org) is a general-purpose programming language that can be used on any modern computer operating system. It can be used for processing text, numbers, images, scientific data and just about anything else you might save on a computer. It is used daily in the operations of the Google search engine, the video-sharing website YouTube, NASA and the New York Stock Exchange. These are but a few of the places where Python plays important roles in the business's success, government, and non-profit organizations; there are many others.
 
 
 ## History
 
-Python was conceived in the late 1980 by [Guido van Rossum](https://en.wikipedia.org/wiki/Guido_van_Rossum)at [Centrum Wiskunde & Informatica](https://en.wikipedia.org/wiki/Centrum_Wiskunde_&_Informatica) (CWI) in the [Netherlands](https://en.wikipedia.org/wiki/Netherlands) as a successor to the [ABC language](https://en.wikipedia.org/wiki/ABC_(programming_language)) (itself inspired by [SETL](https://en.wikipedia.org/wiki/SETL)) capable of [exception handling](https://en.wikipedia.org/wiki/Exception_handling) and interfacing with the [Amoeba](https://en.wikipedia.org/wiki/Amoeba_(operating_system)) operating system. Its implementation began in December 1989. Van Rossum’s long influence on Python is reflected in the title given to him by the Python community: [*Benevolent Dictator For Life*](https://en.wikipedia.org/wiki/Benevolent_Dictator_For_Life) (BDFL) – a post from which he gave himself permanent vacation on July 12, 2018.
+Python was conceived in the late 1980 by [Guido van Rossum](https://en.wikipedia.org/wiki/Guido_van_Rossum)at [Centrum Wiskunde & Informatica](https://en.wikipedia.org/wiki/Centrum_Wiskunde_&_Informatica) (CWI) in the [Netherlands](https://en.wikipedia.org/wiki/Netherlands) as a successor to the [ABC language](https://en.wikipedia.org/wiki/ABC_(programming_language)) (itself inspired by [SETL](https://en.wikipedia.org/wiki/SETL)) capable of [exception handling](https://en.wikipedia.org/wiki/Exception_handling) and interfacing with the [Amoeba](https://en.wikipedia.org/wiki/Amoeba_(operating_system)) operating system. Its implementation began in December 1989. Van Rossum's long influence on Python is reflected in the title given to him by the Python community: [*Benevolent Dictator For Life*](https://en.wikipedia.org/wiki/Benevolent_Dictator_For_Life) (BDFL) – a post from which he gave himself permanent vacation on July 12, 2018.
 
 Python 2.0 was released on 16 October 2000 with many major new features, including a [cycle-detecting](https://en.wikipedia.org/wiki/Cycle_detection) [garbage collector](https://en.wikipedia.org/wiki/Garbage_collection_(computer_science)) and support for [Unicode](https://en.wikipedia.org/wiki/Unicode).
 
@@ -36,32 +29,24 @@ Python 3.0 was released on 3 December 2008. It was a major revision of the langu
 
 ## Readability
 
-Python closely resembles the English language, using words like ‘not’ and ‘in’ to make it to where you can often read a program, or script, aloud to someone else and not feel you’re speaking some arcane language. This is also helped by Python’s very strict punctuation rules which means you don’t have curly braces ({ }) all over your code.
+Python closely resembles the English language, using words like 'not' and 'in' to make it to where you can often read a program, or script, aloud to someone else and not feel you're speaking some arcane language. This is also helped by Python's very strict punctuation rules which means you don't have curly braces ({ }) all over your code.
 
 Also, Python has a set of rules, known as PEP 8, that tell every Python developer how to format their code. This means you always know where to put new lines and, more importantly, that pretty much every other Python script you pick up, whether it was written by a novice or a seasoned professional, will look very similar and be just as easy to read. The fact that my Python code, with five or so years of experience, looks very similar to the code that Guido van Rossum (the creator of Python) writes is such an ego boost.
 
 
 ## Libraries
 
-Python has been around for
-over 20 years, so a lot of code written in Python has built up over the decades
-and, being an open source programming language, a lot of this has been released
-for others to use. Almost all of it is collected on <https://pypi.python.org>, pronounced
-“pie-pee-eye” or, more commonly called “the CheeseShop”. You can install this
-software on your system to be used by your own projects. For example, if you
-want to use Python to build scripts with command line arguments, you’d install
-the “click” library and then import it into your scripts and use it. There are libraries for pretty much any use case you can come up with, from image
-manipulation, to scientific calculations, to server automation.
+Python has been around for over 20 years, so a lot of code written in Python has built up over the decades and, being an open source programming language, a lot of this has been released for others to use. Almost all of it is collected on <https://pypi.python.org>, pronounced "pie-pee-eye" or, more commonly called "the CheeseShop". You can install this software on your system to be used by your own projects. For example, if you want to use Python to build scripts with command line arguments, you'd install the "click" library and then import it into your scripts and use it. There are libraries for pretty much any use case you can come up with, from image manipulation, to scientific calculations, to server automation.
 
 
 ## Community
 
-Python has user groups everywhere, usually called PUGs, and does major conferences on every continent other than Antarctica. PyCon NA, the largest Python conference in North America, sells out its 2,500 tickets this year. And, reflecting Python’s commitment to diversity, it had over 30% women speakers. PyCon NA 2013 also started a trend of offering “Young Coder” workshops, where attendees taught Python to kids between 9 and 16 years of age for a day, getting them familiar with the language and, ultimately, helping them hack and mod some games on the Raspberry Pis they were given. Being part of a such a positive community does a lot to keep you motivated. Check out [PyCon](https://www.pycon.org/) to find your nearest Python conference.
+Python has user groups everywhere, usually called PUGs, and does major conferences on every continent other than Antarctica. PyCon NA, the largest Python conference in North America, sells out its 2,500 tickets this year. And, reflecting Python's commitment to diversity, it had over 30% women speakers. PyCon NA 2013 also started a trend of offering "Young Coder" workshops, where attendees taught Python to kids between 9 and 16 years of age for a day, getting them familiar with the language and, ultimately, helping them hack and mod some games on the Raspberry Pis they were given. Being part of a such a positive community does a lot to keep you motivated. Check out [PyCon](https://www.pycon.org/) to find your nearest Python conference.
 
 
 ## Why Learn Python Programming?
 
-Python is a high-level dynamic programming language. It is quite easy to learn and provides powerful typing. Python code has a very ‘natural’ style to it, in that it is easy to read and understand (thanks to the lack of semicolons and braces). Python programming language runs on any platform, ranging from Windows to Linux to Macintosh, Solaris, etc.
+Python is a high-level dynamic programming language. It is quite easy to learn and provides powerful typing. Python code has a very 'natural' style to it, in that it is easy to read and understand (thanks to the lack of semicolons and braces). Python programming language runs on any platform, ranging from Windows to Linux to Macintosh, Solaris, etc.
 
 The simplicity of Python is what it makes so popular. The following gives a highlight of its aesthetics:
 
